--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.4.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
