--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "framer-motion": "^12.4.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "monaco-editor": "^0.52.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.4",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
