--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "monaco-editor": "^0.52.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.4",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.1"
