--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tailwindcss/postcss": "^4.0.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.2"
   }
 }
