--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.3",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^10.0.0",
+    "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "webpack-dev-server": "^5.2.0"
   }
 }
